12.5/yml/multitoolDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:          
      - name: multitool
        image: wbitt/network-multitool  
        ports:
        - containerPort: 8080   
          name: http-port
        - containerPort: 11443
          name: https-port
