12.5/yml/nginxDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:     
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
          name: nginx
