12.5/yml/svcBack.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcback
spec:
  selector:
    app: back
  ports:
   - name: multitool
     port: 1180
     protocol: TCP    
     targetPort: 8080
