12.5/yml/svcFront.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcfront
spec:
  selector:
    app: front
  ports:
   - name: nginx
     port: 8080
     protocol: TCP    
     targetPort: 80
